# docker_for_developers

1_using_software/: 1_1_starting_ubuntu.txt  1_2_network_configuration.txt  alten.html  httpd.Dockerfile  network_configuration.docker-compose.yml
2_building_an_application/: 2_1_installing_build_tools.txt  2_2_building_the_application.txt  typical.Dockerfile
3_testing_on_different_OS/: 3_1_cross-compiling.txt  3_2_running_on_arm.txt
docker/: build.Dockerfile
src/: main.cpp
workspace/: CMakeLists.txt  build_debug.bash  build_release.bash  run_debug.bash  run_release.bash  run_unit_tests.bash
workspace/.devcontainer/: devcontainer.json
workspace/cmake/: Findgtest.cmake  arm_toolchain.cmake  fetch_external_project.cmake
workspace/docker/: arm.Dockerfile  arm.docker-compose.yml  build.Dockerfile  build.docker-compose.yml
workspace/include/: CMakeLists.txt  FibonacciGenerator.hpp
workspace/src/: CMakeLists.txt  FibonacciGenerator.cpp  main.cpp
workspace/test/: CMakeLists.txt  FibonacciGeneratorTest.cpp
